# layout_engine

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md
backend/: .gitignore  CMakeLists.txt  SCRATCH.md  coordinates.cpp  coordinates.h  geometry.h  layer_manager.cpp  layer_manager.h  layout_engine.cpp  layout_engine.h  layout_engine_ffi.h  lef_reader.cpp  pipeline.cpp  pipeline.h  scene.cpp  scene.h  shape_factory.h  shape_filter.cpp  shape_filter.h  shape_generator.cpp  shape_generator.h  types.h
backend/database/: database.fbs  database_generated.h
backend/lefdef/: lefdefReadme.txt
backend/lefdef/def/TEST/: complete.5.8.def.au
backend/lefdef/def/cdef/: cdef_vc14.vcxproj  cdef_vs19.vcxproj  cdef_vs19.vcxproj.filters  cdef_vs22.vcxproj  defiFill.h  defiGroup.h  defiNet.h  defiNonDefault.h  defiPath.h  defiPinProp.h  defiPropType.h  defiRegion.h  defiRowTrack.h  defiTypedefs.h  defiUser.h  defrReader.h  xdefiFill.cpp  xdefiNet.cpp  xdefiPath.cpp  xdefrReader.cpp
backend/lefdef/def/cdefzlib/: cdefzlib_vc14.vcxproj  cdefzlib_vs19.vcxproj  cdefzlib_vs22.vcxproj  cdefzlib_vs22.vcxproj.filters
backend/lefdef/def/def/: Makefile  def.y  def_keywords.cpp  def_objs.defs  def_vc14.vcxproj  def_vs19.vcxproj  def_vs22.vcxproj  def_vs22.vcxproj.filters  defiAssertion.cpp  defiBlockage.cpp  defiBlockage.hpp  defiComponent.cpp  defiComponent.hpp  defiDefs.hpp  defiFPC.cpp  defiFill.cpp  defiFill.hpp  defiGroup.cpp  defiGroup.hpp  defiIOTiming.cpp  defiKRDefs.hpp  defiMisc.cpp  defiMisc.hpp  defiNet.cpp  defiNet.hpp  defiNonDefault.cpp  defiNonDefault.hpp  defiPartition.cpp  defiPath.cpp  defiPath.hpp  defiPinCap.cpp  defiPinCap.hpp  defiPinProp.cpp  defiPinProp.hpp  defiProp.cpp  defiPropType.cpp  defiPropType.hpp  defiRegion.cpp  defiRegion.hpp  defiRowTrack.cpp  (+16 more)
backend/lefdef/def/defdiff/: defdiff_vc14.vcxproj  defdiff_vs19.vcxproj  defdiff_vs22.vcxproj  defdiff_vs22.vcxproj.filters  diffDefRW.cpp  differDef.cpp
backend/lefdef/def/defrw/: defrw.cpp  defrw_vc14.vcxproj  defrw_vs19.vcxproj  defrw_vs22.vcxproj  defrw_vs22.vcxproj.filters
backend/lefdef/def/defwrite/: defwriteCbs.cpp.old  defwrite_vc14.vcxproj  defwrite_vs19.vcxproj  defwrite_vs19.vcxproj.filters  defwrite_vs22.vcxproj
backend/lefdef/def/defzlib/: defzlib.cpp  defzlib_vc14.vcxproj  defzlib_vs19.vcxproj  defzlib_vs22.vcxproj  defzlib_vs22.vcxproj.filters
backend/lefdef/lef/TEST/: complete.5.8.lef
backend/lefdef/lef/clef/: clef_vc14.vcxproj  clef_vs19.vcxproj  clef_vs22.vcxproj  clef_vs22.vcxproj.filters  lefiLayer.h  lefiMacro.h  lefiNonDefault.h  lefiPropType.h  lefiViaRule.h  lefwWriterCalls.h  xlefiLayer.cpp  xlefiMacro.cpp  xlefiNonDefault.cpp  xlefiPropType.cpp  xlefiViaRule.cpp  xlefwWriterCalls.cpp
backend/lefdef/lef/clefzlib/: clefzlib_vc14.vcxproj  clefzlib_vs19.vcxproj  clefzlib_vs22.vcxproj  clefzlib_vs22.vcxproj.filters
backend/lefdef/lef/lef/: lef.output  lef.y  lef_keywords.cpp  lef_vc14.vcxproj  lef_vs19.vcxproj  lef_vs19.vcxproj.filters  lef_vs22.vcxproj  lefiArray.cpp  lefiDebug.cpp  lefiLayer.cpp  lefiLayer.hpp  lefiMacro.cpp  lefiMacro.hpp  lefiMisc.cpp  lefiMisc.hpp  lefiNonDefault.cpp  lefiNonDefault.hpp  lefiProp.cpp  lefiPropType.cpp  lefiPropType.hpp  lefiUnits.cpp  lefiVia.cpp  lefiVia.hpp  lefiViaRule.cpp  lefiViaRule.hpp  lefrData.cpp  lefrData.hpp  lefrReader.cpp  lefrReader.hpp  lefrSettings.cpp  lefrSettings.hpp  lefwWriter.cpp  lefwWriterCalls.hpp
backend/lefdef/lef/lefdiff/: differLef.cpp  lefdiff_vc14.vcxproj  lefdiff_vs19.vcxproj  lefdiff_vs19.vcxproj.filters  lefdiff_vs22.vcxproj
backend/lefdef/lef/lefrw/: lefrw.cpp  lefrw_vc14.vcxproj  lefrw_vs19.vcxproj  lefrw_vs22.vcxproj  lefrw_vs22.vcxproj.filters
backend/lefdef/lef/lefwrite/: lefwrite.cpp  (+4 more)
(+50 files in other folders)
